# fastapi-k8s

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  k8s_delete.sh  k8s_deploy.sh  makefile  pyproject.toml
ci/: Dockerfile  docker-compose.yml
k8s/: migration-job.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  postgres-config.yaml  postgres-deploy.yaml  postgres-secret.yaml  webapp-deploy.yaml  webapp-ingress.yaml  webapp-secret.yaml
src/: alembic.ini  config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 0001_df9ded0dc2c5_.py
src/api/: routes.py
src/api/v1/: healthcheck.py  user.py
src/crud/: base.py  user.py
src/db/: database.py
src/logic/: user_authentication.py
src/models/: user.py
src/schemas/: user.py
