[tool.poetry]
name = "k8s learn"
version = "0.1.0"
description = ""
authors = ["Valery Semenov <v.semenov@ylab.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.78.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
